Add custom ControlsFX for JDK 17